package com.el_waleed.main_website_api.dto.cards;

import java.util.List;

public class HeaderFooterCardsContent extends CardsContent<HeaderFooterCard> {
    @Override
    public List<HeaderFooterCard> getCards() {
        return super.getCards();
    }
    @Override
    public void setCards(List<HeaderFooterCard> cards) {
        super.setCards(cards);
    }
}
