package com.el_waleed.main_website_api.dto.cards;

import lombok.Data;

@Data
public class WordCard extends StringCard{
    private String word;
}
