@startuml

' ===== Base Abstract Classes =====
Abstract class Card {
}

Abstract class IMGCard {
    - String imageUrl;
    - ImageHandler image;
    - boolean visible;
}

Abstract class StringCard {
}

' ===== Concrete Card Types =====
class RegularIMGCard {
    - String title;
    - String header;
    - String description;
}

class BankIMGCard {
    - String name;
    - String bankLink;
}

class WordCard {
    - String word;
}

class ContactUsCard {
    - String email;
    - String address;
    - String workingHours;
    - String phone;
}

class HeaderFooterCard {
    - String faceBookLink;
    - String XLink;
    - String linkedInLink;
    - String instagramLink;
}

' ===== Content Containers =====
class CardsContent {
    List<Card> cards;
}

class RegularCardsContent {
    getCards();
    setCards();
}

class BankCardsContent {
    getCards();
    setCards();
}

class WordCardsContent {
    getCards();
    setCards();
}

class ContanctUsContent {
    getCards();
    setCards();
}

class HeaderFooterCardsContent {
    getCards();
    setCards();
}

' ===== Inheritance Relationships =====
IMGCard --|> Card
StringCard --|> Card

RegularIMGCard --|> IMGCard
BankIMGCard --|> IMGCard
HeaderFooterCard --|> IMGCard

WordCard --|> StringCard
ContactUsCard --|> StringCard

BankCardsContent --|> CardsContent
RegularCardsContent --|> CardsContent
WordCardsContent --|> CardsContent
ContanctUsContent --|> CardsContent
HeaderFooterCardsContent --|> CardsContent

' ===== Composition Relationships =====
CardsContent *-- Card

RegularCardsContent *-- RegularIMGCard
BankCardsContent *-- BankIMGCard
WordCardsContent *-- WordCard
ContanctUsContent *-- ContactUsCard
HeaderFooterCardsContent *-- HeaderFooterCard
@enduml